objects/Job_Requisition_Essentials__c.object
<CustomObject>
    <fields>
        <fullName>ADP_File_Number__c</fullName>
        <formula>Jobs__r.ADP_File_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADP File Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <formula>Jobs__r.Candidate_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Essentials_Department__c</fullName>
        <formula>TEXT(Product__r.Job_Essentials_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Essentials Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_No_Longer_Needed__c</fullName>
        <formula>Jobs__r.Job_No_Longer_Needed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job No Longer Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jobs__c</fullName>
        <label>Jobs</label>
        <referenceTo>Jobs__c</referenceTo>
        <relationshipLabel>Job Requisition Essentials</relationshipLabel>
        <relationshipName>Job_Requisition_Essentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Job Requisition Essentials</relationshipLabel>
        <relationshipName>Job_Requisition_Essentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Jobs__r.Start_Date_Accepted_Offer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Job Requisition Essentials</label>
    <listViews>
        <fullName>Accounting_Fleet_Job_Essentials</fullName>
        <columns>Start_Date__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Product__c</columns>
        <columns>ADP_File_Number__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>NAME</columns>
        <columns>Jobs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Essentials_Department__c</field>
            <operation>equals</operation>
            <value>Accounting/Fleet</value>
        </filters>
        <filters>
            <field>Completed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Accounting/Fleet Job Essentials</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Accounting_Fleet_Job_Essentials1</fullName>
        <booleanFilter>(1 AND 5 AND 6)  and (2 OR 3 OR 4)</booleanFilter>
        <columns>Start_Date__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Product__c</columns>
        <columns>ADP_File_Number__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>NAME</columns>
        <columns>Jobs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Essentials_Department__c</field>
            <operation>equals</operation>
            <value>accounting/fleet</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>company vehicle</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Fuel Card w/ ID</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Fuel ID Only</value>
        </filters>
        <filters>
            <field>Completed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Candidate_Name__c</field>
            <operation>notEqual</operation>
            <value>Audras Karalis,Aaron Jones,Levi Campbell,Mark Goodrich,Michael Johnston,William Arkel,Dennis Isaacson</value>
        </filters>
        <label>Fleet Job Essentials</label>
    </listViews>
    <listViews>
        <fullName>HR_Job_Essentials</fullName>
        <columns>NAME</columns>
        <columns>Jobs__c</columns>
        <columns>Product__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Essentials_Department__c</field>
            <operation>equals</operation>
            <value>Human Resources</value>
        </filters>
        <label>HR Job Essentials</label>
        <sharedTo>
            <group>Human_Resources</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Job_Essentials</fullName>
        <columns>Start_Date__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Product__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>NAME</columns>
        <columns>Jobs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Essentials_Department__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <filters>
            <field>Completed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Job_No_Longer_Needed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>IT Job Essentials</label>
    </listViews>
    <listViews>
        <fullName>Other_Job_Essentials</fullName>
        <columns>Start_Date__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Product__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>NAME</columns>
        <columns>Jobs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Essentials_Department__c</field>
            <operation>contains</operation>
            <value>Other</value>
        </filters>
        <filters>
            <field>Completed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Other Job Essentials</label>
    </listViews>
    <listViews>
        <fullName>Parts_Service_Job_Essentials</fullName>
        <columns>Start_Date__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Product__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>NAME</columns>
        <columns>Jobs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Essentials_Department__c</field>
            <operation>contains</operation>
            <value>Parts</value>
        </filters>
        <filters>
            <field>Completed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Parts/Service Job Essentials</label>
    </listViews>
    <listViews>
        <fullName>Security_Job_Essentials</fullName>
        <columns>Start_Date__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Product__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>NAME</columns>
        <columns>Jobs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Essentials_Department__c</field>
            <operation>contains</operation>
            <value>Security</value>
        </filters>
        <filters>
            <field>Completed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Security Job Essentials</label>
    </listViews>
    <nameField>
        <displayFormat>JRE-{0000}</displayFormat>
        <label>Job Requisition Essentials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Requisition Essentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>